--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 asgiref==3.4.1
 black==21.8b0
 certifi==2021.5.30
+charset-normalizer==2.0.4
 click==8.0.1
 cloudinary==1.26.0
 cryptocode==0.1
 Django==3.2.7
 djangorestframework==3.12.4
+idna==3.2
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.3.0
@@ -16,6 +18,7 @@ python-dotenv==0.19.0
 python-http-client==3.3.2
 pytz==2021.1
 regex==2021.8.28
+requests==2.26.0
 sendgrid==6.8.1
 six==1.16.0
 sqlparse==0.4.2
