--- a/.env-development
+++ b/.env-development
@@ -24,5 +24,5 @@ CLOUDINARY_API_SECRET=
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 
-# ParrelDots
-PARALLEL_DOTS_API_KEY=
+# DANDELION
+DANDELION_API_KEY=
