--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cloudinary==1.26.0
 cryptocode==0.1
 dj-database-url==0.5.0
 Django==3.2.7
+django-cors-headers==3.8.0
 django-heroku==0.0.0
 djangorestframework==3.12.4
 gunicorn==20.1.0
